# segbot-ur5

./: .gitignore  README.md  segbot_ur5.launch
it_grop/: CMakeLists.txt  package.xml
it_grop/launch/: data_collection.launch  demo.launch  demo_world.launch  segbot_ur5.launch  segbot_ur5_world.launch
it_grop/maps/: dining.pgm  dining.yaml  table.pgm
it_grop/src/: .heatmap.py.swp  BatchDatsetReader.py  TensorflowUtils.py  arm_client.py  best_sorted_keys.json  cal_cost_cache.py  data_visulization.py  demo.py  heatmap.py  init_joints.py  line_plot.py  navigator.py  object_sampler.py  ours.py  process_results.py  scene_sampler.py  sorted_keys.json  voronoi.py
it_grop/worlds/: coffee.world  demo.world  dining.world  restaurant.world
object_rearrangement/: CMakeLists.txt  package.xml
object_rearrangement/launch/: segbot_ur5.launch  segbot_ur5_world.launch
object_rearrangement/maps/: data_collection_env.yaml  demo.pgm  demo.yaml  set_table.pgm  set_table.yaml  table.yaml
object_rearrangement/src/: BatchDatsetReader.py  TensorflowUtils.py  arm_client.py  combine_dataset.py  crop_image.py  demo.py  grop.py  llm.py  llm_only.py  navigator.py  ours.py  pixel_data_collector.py  predict.py  scene_sampler.py  voronoi.py  weak.py
object_rearrangement/worlds/: coffee.world  set_table.world  (+3 more)
plugins/gazebo_contact/: CMakeLists.txt  package.xml
plugins/gazebo_contact/src/: contact_plugin.cpp
rosinstall/: melodic.rosinstall
segbot_ur5_moveit_config/: CMakeLists.txt  package.xml
tamp_perception/: CMakeLists.txt  package.xml
wiping/: CMakeLists.txt  package.xml
(+340 files in other folders)
